# multi-agent-travel-planner-a2a-interop

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: copilot-studio-ci.yml
docs/: a2a-orchestrator-design.md  a2a-state-management.md  application-design.md  docker-authentication-with-openai.md  interoperability-design.md
infrastructure/: __init__.py  azure_agent_setup.py  cosmos_setup.py
interoperability/: README.md  test_smoke.py  validate_config.py  verify_auth.py
interoperability/copilot_studio/: SETUP.md  config.yaml  verify.py
interoperability/foundry/: DEPLOY.md  build_images.py  config.yaml  deploy.py  extract_agent.py  verify_agents.py
interoperability/pro_code/: config.yaml  m365_sdk_client.py
interoperability/shared/: __init__.py
scripts/: provision_azure_agents.py
src/: README.md  run_all.py  run_frontend.py  run_orchestrator.py  run_orchestrator_cli.py
src/deploy/: docker-compose.demo.yml
src/frontend/: App.tsx  agent-registry-utils.test.ts  api.test.ts  api.ts  index.html  itinerary-view-model.test.ts  itinerary-view-model.ts  metadata.json  package-lock.json  package.json  types.test.ts  types.ts  vite.config.ts  workflow-ui.test.ts  workflow-ui.ts
src/orchestrator/: __init__.py  agent_card.py  azure_agent.py  executor.py  server.py  session_manager.py  state_gating.py
src/prompts/: aggregator.txt  booking.txt  budget.txt  clarifier.txt  dining.txt  events.txt  route.txt  search.txt  stay.txt  transport.txt  validator.txt
src/scripts/: run_demo_stack.py
tests/: conftest.py  test_run_all.py
(+399 files in other folders)
